--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "add": "^2.0.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dlx": "^0.2.1",
     "localforage": "^1.10.0",
     "lucide-react": "^0.454.0",
     "match-sorter": "^7.0.0",
@@ -23,6 +28,8 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.53.1",
     "react-router-dom": "^6.27.0",
+    "separator": "^0.1.0",
+    "shadcn-ui": "^0.9.2",
     "sonner": "^1.5.0",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^2.5.4",
